skfe/envoy-starter.json
{
    "static_resources": {
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 8000
                    }
                },
                "filter_chains": {
                    "filters": [
                        {
                            "name": "envoy.http_connection_manager",
                            "config": {
                                "stat_prefix": "ingress_http",
                                "access_log": {
                                    "name": "envoy.file_access_log",
                                    "config": {
                                        "path": "/dev/stdout"
                                    }
                                },
                                "http_filters": [
                                    {
                                        "name": "envoy.router",
                                        "config": {}
                                    }
                                ],
                                "route_config": {
                                    "virtual_hosts": [
                                        {
                                            "name": "liveness",
                                            "domains": "*",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "direct_response": {
                                                        "status": 200,
                                                        "body": {
                                                            "inline_string": "ok"
                                                        }
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "autoroll-internal.skia.org",
                                            "domains": "autoroll-internal.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia-autoroll.corp.goog",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "status-internal.skia.org ",
                                            "domains": "status-internal.skia.org ",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia-status.corp.goog",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "skbug.com",
                                            "domains": "skbug.com",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "bugs.chromium.org",
                                                        "prefix_rewrite": "/detail?id=",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "bug.skia.org",
                                            "domains": "bug.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/p/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "bugs.chromium.org",
                                                        "https_redirect": true
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "bugs.chromium.org",
                                                        "prefix_rewrite": "/p/skia/issues/detail?id=",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "bugs.skia.org",
                                            "domains": "bugs.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/p/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "bugs.chromium.org",
                                                        "https_redirect": true
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "bugs.chromium.org",
                                                        "prefix_rewrite": "/p/skia/issues/detail?id=",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "code.skia.org",
                                            "domains": "code.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia.googlesource.com",
                                                        "path_redirect": "/skia",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "review.skia.org",
                                            "domains": "review.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia-review.googlesource.com",
                                                        "prefix_rewrite": "/c/",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "review2.skia.org",
                                            "domains": "review2.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia-review.googlesource.com",
                                                        "prefix_rewrite": "/c/",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "cs.skia.org",
                                            "domains": "cs.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "cs.chromium.org",
                                                        "prefix_rewrite": "/search/?sq=package:chromium&type=cs&q=file:%5Esrc/third_party/skia/+",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "task-scheduler-internal.skia.org",
                                            "domains": "task-scheduler-internal.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia-task-scheduler.corp.goog",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "fuzzer.skia.org",
                                            "domains": "fuzzer.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "bugs.chromium.org",
                                                        "path_redirect": "/p/oss-fuzz/issues/list?q=label:Proj-skia",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "android-perf.skia.org",
                                            "domains": "android-perf.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "android-master-perf.skia.org",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "www.skia.org",
                                            "domains": "www.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia.org",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "google3-roll.skia.org",
                                            "domains": "google3-roll.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/json/roll"
                                                    },
                                                    "route": {
                                                        "cluster": "autoroll-google3"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "redirect": {
                                                        "host_redirect": "skia-autoroll.corp.goog/r/google3-autoroll",
                                                        "https_redirect": true
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "gold.skia.org",
                                            "domains": "gold.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-skia-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-skia-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "public-gold.skia.org",
                                            "domains": "public-gold.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-skia-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-skia-public-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "lottie-gold.skia.org ",
                                            "domains": "lottie-gold.skia.org ",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-lottie-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-lottie-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "pdfium-gold.skia.org",
                                            "domains": "pdfium-gold.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-pdfium-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-pdfium-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "flutter-gold.skia.org",
                                            "domains": "flutter-gold.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/json/hashes"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-flutter-baselineserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/json/expectations/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-flutter-baselineserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-flutter-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-flutter-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "chrome-gpu-gold.skia.org",
                                            "domains": "chrome-gpu-gold.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/json/hashes"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-gpu-baselineserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/json/expectations/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-gpu-baselineserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-gpu-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-gpu-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        },
                                        {
                                            "name": "chrome-gold.skia.org",
                                            "domains": "chrome-gold.skia.org",
                                            "routes": [
                                                {
                                                    "match": {
                                                        "prefix": "/json/hashes"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-baselineserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/json/expectations/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-baselineserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/img/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-diffserver"
                                                    }
                                                },
                                                {
                                                    "match": {
                                                        "prefix": "/"
                                                    },
                                                    "route": {
                                                        "cluster": "gold-chrome-skiacorrectness"
                                                    }
                                                }
                                            ]
                                        }
                                    ]
                                }
                            }
                        }
                    ]
                }
            }
        ],
        "clusters": [
            {
                "name": "autoroll-google3",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "autoroll-google3",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-skia-diffserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-skia-diffserver",
                            "port_value": 8001
                        }
                    }
                ]
            },
            {
                "name": "gold-skia-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-skia-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-skia-public-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-skia-public-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-lottie-diffserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-lottie-diffserver",
                            "port_value": 8001
                        }
                    }
                ]
            },
            {
                "name": "gold-lottie-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-lottie-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-pdfium-diffserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-pdfium-diffserver",
                            "port_value": 8001
                        }
                    }
                ]
            },
            {
                "name": "gold-pdfium-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-pdfium-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-flutter-baselineserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-flutter-baselineserver",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-flutter-diffserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-flutter-diffserver",
                            "port_value": 8001
                        }
                    }
                ]
            },
            {
                "name": "gold-flutter-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-flutter-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-chrome-gpu-baselineserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-chrome-gpu-baselineserver",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-chrome-gpu-diffserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-chrome-gpu-diffserver",
                            "port_value": 8001
                        }
                    }
                ]
            },
            {
                "name": "gold-chrome-gpu-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-chrome-gpu-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-chrome-baselineserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-chrome-baselineserver",
                            "port_value": 8000
                        }
                    }
                ]
            },
            {
                "name": "gold-chrome-diffserver",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-chrome-diffserver",
                            "port_value": 8001
                        }
                    }
                ]
            },
            {
                "name": "gold-chrome-skiacorrectness",
                "type": "STRICT_DNS",
                "connect_timeout": {
                    "seconds": 1
                },
                "hosts": [
                    {
                        "socket_address": {
                            "address": "gold-chrome-skiacorrectness",
                            "port_value": 8000
                        }
                    }
                ]
            }
        ]
    }
}
